--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     </div>
 
     <footer>  
-      Scrool below
+      Scroll below
     </footer>
     
     <!-- Load additional JS scripts here -->
