--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
   </body>
 </html>
 
+
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -93,6 +94,26 @@
 <body>
 
 <h2>Experience</h2>
+<div class="square"></div>
+
+</body>
+</html> 
+
+<html>
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+.square {
+  height: 300px;
+  width: 300px;
+  background-color: #000000;
+  align: left;
+}
+</style>
+</head>
+<body>
+
+<h2></h2>
 <div class="square"></div>
 
 </body>
