--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="A brief description of your site for search engines">
     <meta name="author" content="Information about the author here">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"/>
+    <script scr="particles.js"></script>
     <link rel="icon" type="image/png" href="favicon.png">
   
     <!-- Stylesheets -->
@@ -78,6 +79,8 @@
   </body>
 </html>
 
+<div id="particles-js"></div>
+<script src="particles.js"></script>
 
 <div id="introduction-section">
 	<h2>Experience</h2>
