--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <meta name="description" content="A brief description of your site for search engines">
     <meta name="author" content="Information about the author here">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"/>
-    <script scr="particles.js"></script>
     <link rel="icon" type="image/png" href="favicon.png">
   
     <!-- Stylesheets -->
@@ -80,6 +79,8 @@
 </html>
 
 <div id="particles-js"></div>
+<script scr="particles.js"></script>
+<script src="app.js"></script>
 
 
 <div id="introduction-section">
