--- a/index.html
+++ b/index.html
@@ -78,10 +78,13 @@
   </body>
 </html>
 
-<div id="particles-js"></div>
-<script scr="particles.js"></script>
-<script src="app.js"></script>
+<body>
+  <div id="particles-js"></div>
 
+
+  <script scr="particles.js"></script>
+  <script src="app.js"></script>
+</body>
 
 <div id="introduction-section">
 	<h2>Experience</h2>
