--- a/index.html
+++ b/index.html
@@ -59,7 +59,11 @@
           <h2>Home</h2>
           <p>
             Welcome to my portfolio. Here you'll see some of the things I've been working on in the Crypto Space. <a
-              id="menu-links" href="https://minutecrypto.org">Click here</a> to check out my site!
+              id="menu-links" target="_blank" href="https://minutecrypto.org">Click here</a> to check out my site!
+          </p>
+          <p>
+            Feel free to grab a copy of my <a id="menu-links" target="_blank"
+              href="./Alfonso's Resume PDF.pdf">Resume!</a>
           </p>
         </div>
 
@@ -468,6 +472,27 @@
     <img src="icons/minutecrypto.png" width="30" height="30" />
     <h3>Blog #6</h3>
   </div>
+
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+    integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
+    crossorigin="anonymous" />
+
+  <div class="footerfoot">
+    <!-- 0:FOOTER -->
+    <div class="footer-social-icons">
+      <!-- 0:ICONS -->
+      <a class="social-icon" target="_blank" href="https://github.com/alfonsolua36"><i id="icon"
+          class="fab fa-github"></i></a>
+      <a class="social-icon" target="_blank" href="https://www.instagram.com/minutcrypto/"><i id="icon"
+          class="fab fa-instagram"></i></a>
+      <a class="social-icon" target="_blank" href="https://twitter.com/MinutCrypto"><i id="icon"
+          class="fab fa-twitter"></i></a>
+      <a class="social-icon" target="_blank" href="https://www.tiktok.com/@minutcrypto"><i id="icon"
+          class="fab fa-tiktok"></i></a>
+      <a class="social-icon" target="_blank" href="https://www.youtube.com/channel/UCTXuiTRxOz40gfrfvyatgXA"><i
+          id="icon" class="fab fa-youtube"></i></a>
+    </div><!-- 1:ICONS -->
+  </div><!-- 1:FOOTER -->
 
 
 </div>
