Footer hrml edit

--- a/index.html
+++ b/index.html
@@ -58,9 +58,16 @@
         <div id="home" class="content-region hide">
           <h2>Home</h2>
           <p>
-            Welcome to my portfolio. Here you'll see some of the things I've been working on in the Crypto Space. <a
-              id="menu-links" target="_blank" href="https://minutecrypto.org">Click here</a> to check out my site!
+            Welcome to my portfolio. Here you'll see some of the things I've been working on in the crypto space as well
+            in my personal career.
           </p>
+          <p>
+            A little about me. I live in Santa Monica. I love surfing, hiking, and eating in n out
+            on
+            the weekends. When I am not doing those things,
+            you can catch me developing my coding skills. I got into coding at a young age cloning
+            websites for fun. When I am not doing that, you can find me creating content at my <a id="menu-links"
+              target="_blank" href="https://www.youtube.com/channel/UCTXuiTRxOz40gfrfvyatgXA">Youtube Chanel!</a> </p>
           <p>
             Feel free to grab a copy of my <a id="menu-links" target="_blank"
               href="./Alfonso's Resume PDF.pdf">Resume!</a>
@@ -71,9 +78,12 @@
           <h2>About</h2>
           <p>
             I am an entreprenuer, developer, investor, and content creator who loves learning and creating new things in
-            the crypto space. My background is
-            in
+            the crypto space.
           </p>
+          <p> I love creating content around crypto and educating people in the space. In
+            addition, when am I not creating video
+            content, you can find me creating content on <a id="menu-links" target="_blank"
+              href="minutecrypto.org">Minutecrypto.org!</a></p>
         </div>
 
         <div id="contact" class="content-region hide">
@@ -477,22 +487,23 @@
     integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
     crossorigin="anonymous" />
 
-  <div class="footerfoot">
-    <!-- 0:FOOTER -->
-    <div class="footer-social-icons">
-      <!-- 0:ICONS -->
-      <a class="social-icon" target="_blank" href="https://github.com/alfonsolua36"><i id="icon"
-          class="fab fa-github"></i></a>
-      <a class="social-icon" target="_blank" href="https://www.instagram.com/minutcrypto/"><i id="icon"
-          class="fab fa-instagram"></i></a>
-      <a class="social-icon" target="_blank" href="https://twitter.com/MinutCrypto"><i id="icon"
-          class="fab fa-twitter"></i></a>
-      <a class="social-icon" target="_blank" href="https://www.tiktok.com/@minutcrypto"><i id="icon"
-          class="fab fa-tiktok"></i></a>
-      <a class="social-icon" target="_blank" href="https://www.youtube.com/channel/UCTXuiTRxOz40gfrfvyatgXA"><i
-          id="icon" class="fab fa-youtube"></i></a>
-    </div><!-- 1:ICONS -->
-  </div><!-- 1:FOOTER -->
-
+  <section>
+    <div class="footerfoot">
+      <!-- 0:FOOTER -->
+      <div class="foot-social-icons">
+        <!-- 0:ICONS -->
+        <a class="social-icon" target="_blank" href="https://github.com/alfonsolua36"><i id="icon"
+            class="fab fa-github"></i></a>
+        <a class="social-icon" target="_blank" href="https://www.instagram.com/minutcrypto/"><i id="icon"
+            class="fab fa-instagram"></i></a>
+        <a class="social-icon" target="_blank" href="https://twitter.com/MinutCrypto"><i id="icon"
+            class="fab fa-twitter"></i></a>
+        <a class="social-icon" target="_blank" href="https://www.tiktok.com/@minutcrypto"><i id="icon"
+            class="fab fa-tiktok"></i></a>
+        <a class="social-icon" target="_blank" href="https://www.youtube.com/channel/UCTXuiTRxOz40gfrfvyatgXA"><i
+            id="icon" class="fab fa-youtube"></i></a>
+      </div><!-- 1:ICONS -->
+    </div><!-- 1:FOOTER -->
+  </section>
 
 </div>
