--- a/index.html
+++ b/index.html
@@ -300,10 +300,13 @@
   </div>
 
   <div>
-    <img src="icons/photoshop.png">
-    <h3>ADOBE PHOTOSHOP</h3>
-    <label for="skills">Advanced</label>
-    <progress id="skills" value="80" max="100"></progress>
+    <a href="https://www.youtube.com/watch?v=DrrlcdPXfOU&list=PLGErkXK6tKhRB_9u9ZgHLTaG9f3aZZdHN" target="_blank"
+      style="display:block;height:100%;width:100%">
+      <img src="icons/photoshop.png">
+      <h3>ADOBE PHOTOSHOP</h3>
+      <label for="skills">Advanced</label>
+      <progress id="skills" value="80" max="100"></progress>
+    </a>
   </div>
 
 
