--- a/index.html
+++ b/index.html
@@ -138,6 +138,7 @@
     </p>
   </div>
 
+
   <div>
     <a href="
     https://reynososafgecampaign.github.io/
@@ -428,7 +429,8 @@
   </div>
 
   <div>
-    <a href="https://vino-rosso.herokuapp.com/users/login/?next=/topics/" style="display:block;height:100%;width:100%">
+    <a href="https://vino-rosso.herokuapp.com/users/login/?next=/topics/" target="_blank"
+      style="display:block;height:100%;width:100%">
       <img src="icons/wine.png">
       <h3>Vinno-rosso</h3>
       <details>
@@ -439,7 +441,7 @@
   </div>
 
   <div>
-    <a href="https://www.linkedin.com/in/alfonsolua/" style="display:block;height:100%;width:100%">
+    <a href="https://www.linkedin.com/in/alfonsolua/" target="_blank" style="display:block;height:100%;width:100%">
       <img src="icons/linkedin.gif" width="30" height="30">
       <h3>LinkedIn</h3>
       <details>
@@ -450,7 +452,7 @@
   </div>
 
   <div>
-    <a href="https://github.com/alfonsolua36" style="display:block;height:100%;width:100%">
+    <a href="https://github.com/alfonsolua36" target="_blank" style="display:block;height:100%;width:100%">
       <img src="icons/github.png" width="30" height="30">
       <h3>GitHub</h3>
       <details>
